HelloUltraviolet/Fixtures/RejectedSource/Keys/YieldFromWhileKeyHeld/Expected.uv
//! Expected diagnostic metadata for the YieldFromWhileKeyHeld rejected-source specimen.

expectedDiagnostic("E-CON-0224", "diagnostics.21.AsyncKeyDiagnostics")
